# MareDownloader

./: .gitignore  README.md  install.sh  maredownloader.flatpak  meson.build  moe.ponix.maredownloader.json
data/: meson.build  moe.ponix.maredownloader.appdata.xml.in  moe.ponix.maredownloader.desktop.in  moe.ponix.maredownloader.gschema.xml
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
src/: catgirl.py  main.py  mare.py  maredownloader.gresource.xml  maredownloader.in  meson.build  preferenceswindow.py  window.py
